2009-09-04  Michael Wiegand <michael.wiegand@intevation.de>

	* configure.in: Removed checks for libl and libfl which caused
	unnecessary linking against libl.

	* libopenvas-config.in: Removed handling of llib.

	* configure: Regenerated.

2009-09-04  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* nasl/strutils.c, nasl/strutils.h, nasl/nasl_cmd_exec.c, nasl_debug.c:
	Cosmetics, major reformatting.
	Added todos about possible replacement by glib and move to other part of
	openvas-libraries, doc.
	
	* nasl/nasl_var.c: Removed unnecessary include

2009-09-04  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* misc/openvas_logging.c, misc/openvas_server.c,
	misc/openvas_ssh_login.c: Added todos regarding library reorganisation.

2009-09-04  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* misc/plugutils.c: Removed K&R style function declarations,
	whitespaces, unused define, added doc and made a TODO indexable.

2009-09-04  Chandrashekhar B <bchandra@secpod.com>

	* nasl/nasl_host.c: (get_host_ip): Addressed an issue. The
	function was returning IPv6 mapped IPv4 address, now returns
	pure IPv4 address. Many applications won't accept v6 mapped v4.

2009-09-04  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* libopenvas-config.in: Corrected string comparison.

2009-09-04  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* nasl/nasl_signature (init_openvas_gpgme_ctx): Added call to
	gpgme_version_check which apparently initializes parts of gpgme.
	This might fix bug #972 or #1079 (http://bugs.openvas.org/1079).
	With help from Michael Wiegand.

2009-09-03 Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/hash_table_file.c: Transferred copyright to Greenbone.
	Replaced includes.h by those needed really.

	* misc/hash_table_file.h: Transferred copyright to Greenbone.

2009-09-03  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* Makefile: Install nasl.h header.
